# spacesniff

./: .gitignore  README.md  pyproject.toml
Docs/: session-transcript-2026-05-25.md
Docs/Changes/: 2026-05-25-terminal-spacesniff.md  2026-05-26-scan-filtering-and-help.md  2026-05-26-windows-support.md
scripts/: build-standalone.ps1  build-standalone.sh
spacesniff/: __init__.py  __main__.py  app.py  cli.py  clipboard.py  models.py  scanner.py
tests/: test_app.py  test_cli.py  test_scanner.py
