[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spacesniff"
version = "0.1.0"
description = "Interactive terminal disk usage explorer inspired by SpaceSniffer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "textual>=0.67.1",
]

[project.scripts]
spacesniff = "spacesniff.cli:main"

[tool.setuptools.packages.find]
include = ["spacesniff*"]
